# atmosphere-android

./: .gitignore  ACTION_PLAN.md  ANDROID_AUDIT_RESULTS.md  ARCHITECTURE_CORRECTION.md  AUDIT_ANDROID.md  BLE_FIX_SUMMARY.md  BUILDING.md  BUILD_SUCCESS.md  CLEANUP_SUMMARY.md  CODEX_ANDROID_REVIEW.md  COMPLETION_REPORT.md  CRITICAL_CORRECTIONS.md  Cargo.toml  FINAL_COMPLETION_REPORT.md  FINAL_STATUS.md  HORIZON_APP_README.md  MULTI_VENDOR_AI.md  OVERNIGHT_SUMMARY.md  POLISH_REPORT.md  README.md  REDESIGN_SUMMARY.md  REFACTOR_COMPLETE.md  REFACTOR_PLAN.md  RUST_CORE_MIGRATION.md  SENSOR_NODE.md  TESTING_CHECKLIST.md  TESTING_EMBEDDING.md  TRANSPORT_IMPLEMENTATION.md  build.gradle.kts  gradle.properties  gradlew  local.properties.template  mesh-chat-http-patch.kt  mesh-chat-routing-patch.kt  settings.gradle.kts
.cargo/: config.toml
.github/workflows/: android.yml
_archive/network_old/network/: ConnectionTrain.kt  MeshConnection.kt  ResilientTransportManager.kt  TransportManager.kt  TransportManagerV2.kt  WebSocketTransport.kt
android/: Cargo.toml  Makefile  README.md  build-android.sh  build.rs
android/src/: atmosphere.udl  lib.rs
app/: build.gradle.kts  proguard-rules.pro
app/libs/: README.md
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/llamafarm/atmosphere/: IAtmosphereCallback.aidl  IAtmosphereService.aidl
app/src/main/assets/rag/: indo_pacific.json
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/kotlin/com/llamafarm/atmosphere/: AtmosphereApplication.kt  AtmosphereCapability.kt  MainActivity.kt
app/src/main/kotlin/com/llamafarm/atmosphere/apps/: AppCapability.kt  AppRegistry.kt
app/src/main/kotlin/com/llamafarm/atmosphere/auth/: IdentityManager.kt
app/src/main/kotlin/com/llamafarm/atmosphere/bindings/: Atmosphere.kt
app/src/main/kotlin/com/llamafarm/atmosphere/capabilities/: CameraCapability.kt  CapabilityMeshIntegration.kt  GeminiNanoDetector.kt  MeshCapabilityHandler.kt  SensorCapability.kt  SensorCapabilityDetector.kt  SensorRequestHandler.kt  UniversalAIDetector.kt  VoiceCapability.kt
app/src/main/kotlin/com/llamafarm/atmosphere/core/: AtmosphereCore.kt  AtmosphereNative.kt  Capability.kt  CrdtCoreWrapper.kt  GossipManager.kt
app/src/main/kotlin/com/llamafarm/atmosphere/cost/: CostBroadcaster.kt  CostCollector.kt
app/src/main/kotlin/com/llamafarm/atmosphere/data/: DaemonRepository.kt  DataStoreModule.kt  MeshRepository.kt  SavedMesh.kt
app/src/main/kotlin/com/llamafarm/atmosphere/discovery/: LanDiscovery.kt
app/src/main/kotlin/com/llamafarm/atmosphere/horizon/: AnomalyScreen.kt  HorizonModels.kt  HorizonRepository.kt  HorizonScreen.kt  HorizonTheme.kt  HorizonViewModel.kt  KnowledgeScreen.kt  MissionBar.kt  OsintScreen.kt  VoiceScreen.kt
app/src/main/kotlin/com/llamafarm/atmosphere/inference/: InferenceEngine.kt  LlamaCppEngine.kt  LocalInferenceEngine.kt  ModelManager.kt  ModelRegistry.kt  README.md  UniversalRuntime.kt
app/src/main/kotlin/com/llamafarm/atmosphere/llamafarm/: LlamaFarmLite.kt  PromptManager.kt
app/src/main/kotlin/com/llamafarm/atmosphere/mesh/: MeshRequestProcessor.kt  ModelCatalog.kt  ModelTransferService.kt
app/src/main/kotlin/com/llamafarm/atmosphere/network/: ConnectionTrain.kt  LegacyTypes.kt  MeshApiClient.kt  MeshConnection.kt  NetworkUtils.kt  TransportManager.kt  TransportTypes.kt  Types.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
atmosphere-chat/: build.gradle.kts
atmosphere-chat/src/main/: AndroidManifest.xml
atmosphere-chat/src/main/java/ai/atmosphere/chat/: AtmoClient.kt  ChatActivity.kt  ChatActivity_original.kt.bak  ChatActivity_updated.kt.bak
atmosphere-chat/src/main/res/values/: themes.xml
atmosphere-client/: build.gradle.kts
atmosphere-client/src/main/: AndroidManifest.xml
atmosphere-client/src/main/res/drawable/: ic_launcher.xml  ic_launcher_foreground.xml
atmosphere-client/src/main/res/values/: colors.xml  strings.xml  themes.xml
atmosphere-photo/: build.gradle.kts
atmosphere-photo/src/main/: AndroidManifest.xml
atmosphere-photo/src/main/res/drawable/: ic_notification.xml
atmosphere-photo/src/main/res/values/: strings.xml  themes.xml
atmosphere-sdk/: README.md  VISION_API.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
atmosphere-sdk/src/main/: AndroidManifest.xml
atmosphere-sdk/src/main/aidl/com/llamafarm/atmosphere/: AtmosphereCapability.aidl  IAtmosphereService.aidl
atmosphere-sdk/src/main/kotlin/com/llamafarm/atmosphere/: AtmosphereCapability.kt
core/: Cargo.toml
core/src/: capability.rs  cost.rs  error.rs  intent.rs  lib.rs  mesh.rs  metrics.rs  node.rs
docs/: LOCAL_INFERENCE.md  MODEL_TRANSFER_INTEGRATION.md  MODEL_TRANSFER_PROTOCOL.md  MODEL_TRANSFER_README.md
example-app/: MainActivity.kt
horizon-app/: build.gradle.kts
horizon-app/src/main/: AndroidManifest.xml
horizon-app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
horizon-app/src/main/res/values/: strings.xml  themes.xml
rust/: Cargo.toml  build-android.sh
rust/.cargo/: config.toml
rust/src/: lib.rs
scripts/: verify-ble.sh
(+90 files in other folders)
