[workspace]
resolver = "2"
members = [
    "core",
    "android",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Atmosphere Team"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "sync", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
async-trait = "0.1"
rand = "0.8"
uniffi = "0.28"
