[package]
name = "atmosphere-android"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Android JNI bindings for Atmosphere mesh network"

[lib]
crate-type = ["cdylib"]
name = "atmosphere_android"

[dependencies]
atmosphere-core = { path = "../core" }
serde_json.workspace = true
uuid.workspace = true
