[package]
name = "atmosphere-core"
version = "0.1.0"
edition = "2021"
description = "Atmosphere Android native inference core"
license = "MIT"

[lib]
name = "atmosphere_core"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
log = "0.4"
android_logger = "0.13"

# Future dependencies for LLM inference:
# llama-cpp = { version = "0.1", optional = true }
# candle-core = { version = "0.4", optional = true }

[features]
default = []
# llama = ["llama-cpp"]
# candle = ["candle-core"]

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization (slower compile)
panic = "abort"        # Smaller binary, no unwinding
strip = true           # Strip symbols

[profile.release.package."*"]
opt-level = "z"
